--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Leader Board using HTML CSS and Javascript</title>
+	<script src="js/jquery-3.6.1.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="js/jquery-3.6.1.js"><\/script>')</script>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
@@ -12,9 +15,8 @@
 			<div class="lboard_tabs">
 				<div class="tabs">
 					<ul>
-						<li data-li="today">Today</li>
-						<li class="active" data-li="month">Month</li>
-						<li data-li="year">Year</li>
+						<li data-li="today">Trivia Leader Board</li>
+						<li class="active" data-li="month">Matching Game Leader Board</li>
 					</ul>
 				</div>
 			</div>
@@ -22,10 +24,6 @@
 				<div class="lboard_item today lboard_mem_today" style="display: none;">
 				</div>
 				<div class="lboard_item month lboard_mem_month" style="display: block;">
-					
-				</div>
-				<div class="lboard_item year lboard_mem_year" style="display: none;">
-				
 				</div>
 			</div>
 		</div>
