--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Leader Board using HTML CSS and Javascript</title>
+	<title>Leader Board</title>
 	<script src="js/jquery-3.6.1.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/jquery-3.6.1.js"><\/script>')</script>
@@ -15,14 +15,14 @@
 			<div class="lboard_tabs">
 				<div class="tabs">
 					<ul>
-						<li data-li="today">Trivia Leader Board</li>
+						<!--<li data-li="today">Trivia Leader Board</li>-->
 						<li class="active" data-li="month">Matching Game Leader Board</li>
 					</ul>
 				</div>
 			</div>
 			<div class="lboard_wrap">
-				<div class="lboard_item today lboard_mem_today" style="display: none;">
-				</div>
+				<!--<div class="lboard_item today lboard_mem_today" style="display: none;"></div>-->
+				
 				<div class="lboard_item month lboard_mem_month" style="display: block;">
 				</div>
 			</div>
